// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a disabled select 1`] = `
<div
  aria-disabled={true}
  aria-expanded={false}
  className="css-1abkg230 css-119vncu"
  data-test="ui-select"
  disabled={true}
  onSelect={[Function]}
  open={false}
  role="menu"
  style={Object {}}
>
  <div
    className="css-d6226c css-1abkg235"
    onClick={undefined}
  >
    <span
      className="css-16ef8bd0 css-13lua4i"
      color="navy500"
      onClick={undefined}
      size="small"
      style={Object {}}
    >
      Select…
    </span>
    <div
      className="css-j8bbvv css-1abkg231"
      open={false}
    >
      <i
        className="css-fj83eq0 css-3bw6sb"
        color="grey500"
        onClick={undefined}
        size={24}
        style={Object {}}
        title={undefined}
      >
        <svg
          aria-hidden="true"
          height={24}
          width={24}
        >
          <title>
            chevron_right
          </title>
          <use
            xlinkHref="#chevron_right"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    className="css-mekkd6 css-1abkg233"
    data-test="ui-select__options"
    onClick={[Function]}
    open={false}
  >
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Hertfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Bedfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Oxfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Hampshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;

exports[`Select should render a readonly select 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  className="css-1abkg230 css-93bca3"
  data-test="ui-select"
  disabled={false}
  onSelect={[Function]}
  open={false}
  role="menu"
  style={Object {}}
>
  <div
    className="css-d6226c css-1abkg235"
    onClick={undefined}
  >
    <span
      className="css-16ef8bd0 css-13lua4i"
      color="navy500"
      onClick={undefined}
      size="small"
      style={Object {}}
    >
      Select…
    </span>
    <div
      className="css-j8bbvv css-1abkg231"
      open={false}
    >
      <i
        className="css-fj83eq0 css-3bw6sb"
        color="grey500"
        onClick={undefined}
        size={24}
        style={Object {}}
        title={undefined}
      >
        <svg
          aria-hidden="true"
          height={24}
          width={24}
        >
          <title>
            chevron_right
          </title>
          <use
            xlinkHref="#chevron_right"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    className="css-mekkd6 css-1abkg233"
    data-test="ui-select__options"
    onClick={[Function]}
    open={false}
  >
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Hertfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Bedfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Oxfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Hampshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;

exports[`Select should render shallow component ok 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  className="css-1abkg230 css-1q14eya"
  data-test="ui-select"
  disabled={false}
  onSelect={[Function]}
  open={false}
  role="menu"
  style={Object {}}
>
  <div
    className="css-d6226c css-1abkg235"
    onClick={[Function]}
  >
    <span
      className="css-16ef8bd0 css-i7rnis"
      color="navy700"
      onClick={undefined}
      size="small"
      style={Object {}}
    >
      Select…
    </span>
    <div
      className="css-j8bbvv css-1abkg231"
      open={false}
    >
      <i
        className="css-fj83eq0 css-nofld7"
        color="navy700"
        onClick={undefined}
        size={24}
        style={Object {}}
        title={undefined}
      >
        <svg
          aria-hidden="true"
          height={24}
          width={24}
        >
          <title>
            chevron_right
          </title>
          <use
            xlinkHref="#chevron_right"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    className="css-mekkd6 css-1abkg233"
    data-test="ui-select__options"
    onClick={[Function]}
    open={false}
  >
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Hertfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Bedfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Oxfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="css-176z692 css-1abkg234"
      data-test="ui-select__options__option"
      name="Hampshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;
